--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,8 @@
     <title>Northcoders News</title>
   </head>
   <body>
-
   <div id="app">
-
   </div>
-  <script src="/js/bundle.js"></script>
+  <script type="text/javascript" src="/js/bundle.js"></script>
   </body>
 </html>
